# shellike

./: Cargo.toml  README.md
crates/bbash/: Cargo.toml
crates/builtins/: Cargo.toml
crates/editor/: Cargo.toml
crates/frontend/: Cargo.toml
crates/frontend/src/: lib.rs
crates/fs/: Cargo.toml
crates/fs-memory/: Cargo.toml
crates/os/: Cargo.toml
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/shell/: Cargo.toml
crates/shell/src/: lib.rs
src/: main.rs  prelude.rs
src/commands/: clear.rs  command.rs  echo.rs  exit.rs  mod.rs  registry.rs
src/frontend/: mod.rs
src/frontend/common/: frame.rs  frontend.rs  key.rs  mod.rs
src/frontend/unix/: mod.rs  termios.rs  unix_frontend.rs
src/parser/: ast.rs
src/shell/: mod.rs  result.rs  runtime.rs  shell.rs
