[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
repository = "https://github.com/itsKryxen/shellike"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[package]
name = "shellike"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
frontend = {path="crates/frontend"}
